# balance_hbt

./: .gitignore  README.md
figs/: bf_phi.py  bf_qinv.py  bf_y.py  cf2panels_outsidelong.py  cf_outsidelong.py  cf_qinv.py  spectra.py
figs/phenixdata/: phenix_pion.txt
karinarun/: CMakeLists.txt  bw.py  chisquare  chisquare.cc  protonsonly.cc  runner_cf.sh  sci.py  summer_cf.cc
karinarun/parameters/: bfpars.txt  hbtpars.txt
karinarun/plots/: plot.py
run/: CMakeCache.txt  CMakeLists.txt  Makefile  balance_hbt  balance_hbt.cc  balhbtmain.cc  bwspectra  bwspectra.cc  cmake_install.cmake  crap  crap.cc  data.txt  old_balance_hbt  old_balance_hbt.cc  piper.py  piperbw.py  runner.sh  summer_balhbt.cc
run/parameters/: bfpars.txt  bwpars.txt  hbtpars.txt
run/phenix_data/: HEPData_kaon_AuAu.csv  HEPData_pion_AuAu.csv  HEPData_proton_AuAu.csv  phenix_kaon.txt  phenix_pion.txt  phenix_proton.txt
run/plots/: phenix_kaon.txt  plot.py  spectra_K.txt  spectra_p.txt  spectra_pi.txt
run/spectra/: spectra_K.txt  spectra_p.txt  spectra_pi.txt
scottrun/: CMakeLists.txt  balhbt  balhbtmain.cc  balmain.cc  bwspectra.cc  chisquare.cc  decaytest.cc  piper.py  piperbw.py  runner.sh  runner_cf.sh  sci.py  spectratester.cc  summer_balhbt.cc  summer_cf.cc
scottrun/34body/: decay_4body.cc
scottrun/parameters/: bfpars.txt  bwpars.txt  hbtpars.txt  respars.txt
software/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
software/include/: acceptancebal.h  balhbt.h
software/src/: BF.cc  CFarrays.cc  acceptancebal.cc  balhbt.cc  blastwave.cc  decay.cc  decayproducts.cc  evaluate.cc  hbtcalc.cc  hbtpart.cc  stableinfo.cc
